--- a/views/drones/create-form.hbs
+++ b/views/drones/create-form.hbs
@@ -1,1 +1,15 @@
 <h2>Create a new drone</h2>
+
+<form method='POST' action="/drones/create">
+
+    <label for="name">Name</label>
+    <input type="text" name="name"/>
+
+    <label for="propellers">Propellers</label>
+    <input type="number" name="propellers"/>
+
+    <label for="maxSpeed">Maximum Speed</label>
+    <input type="number" name="maxSpeed"/>
+
+    <button type="submit">Add drone</button>
+</form>
