--- a/views/drones/list.hbs
+++ b/views/drones/list.hbs
@@ -1,1 +1,14 @@
 <h2>Available drones</h2>
+
+{{#each this}}
+    <p>Name: {{this.name}}</p>
+    <p>Propellers: {{this.propellers}}</p>
+    <p>Maximum speed (in m/s): {{this.maxSpeed}}</p>
+    
+    <p><a href="/drones/{{this._id}}/edit"> EDIT </a> </p>
+    
+    <form method='POST' action="/drones/{{this._id}}/delete"
+    <p><button type="submit">DELETE</button></p>
+    </form>
+    
+{{/each}}
