--- a/views/drones/list.hbs
+++ b/views/drones/list.hbs
@@ -1,6 +1,6 @@
 <h2>Available drones</h2>
 
-{{#each this}}
+{{#each findDrones}}
     <p>Name: {{this.name}}</p>
     <p>Propellers: {{this.propellers}}</p>
     <p>Maximum speed (in m/s): {{this.maxSpeed}}</p>
